99201 - right nav feature fixes for mobile/tablet and minor layout fix to address extra spaces between right and optional right when they stack.

--- a/drupal/sites/all/themes/leidos/css/sass/partials/_layout.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/_layout.scss
@@ -233,6 +233,29 @@
 		}	
 	}
 
+	.panels-ipe,
+	.optional-right-rail {
+		#content {
+			.section,
+			.content {
+				.content-container {
+					.panels-flexible-column {
+						&.right-container {
+							.panels-flexible-region {
+								&.right-rail {
+									padding-bottom: 0;
+								}
+
+								&.optional-right-rail {
+									margin: 0;
+								}
+							}
+						}
+					}
+				}
+			}
+		}	
+	}
 }
 
 
