--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_lists.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_lists.scss
@@ -20,7 +20,7 @@
 	.column-container {
 		border: none;
 		float: left;
-		height: 175px;
+		// height: 175px; temp disable.
 		margin: 0 1.5% 20px;
 		padding: 0;
 		width: 17%;
@@ -89,7 +89,6 @@
 **************************************************/
 @media only screen and (min-width: 721px) and (max-width: 960px) {
 	.pane-bundle-list-columns {
-		margin-bottom: 20px;
 		// border-bottom: 1px solid $color-gray-medium-light;
 
 		.column-container {
